--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,13 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.Moody" />
 
+        <service
+            android:name="id.dev.moody.ui.MusicService"
+            android:foregroundServiceType="mediaPlayback"
+            android:enabled="true"
+            android:exported="false" />
+
+
     </application>
 
 </manifest>
